<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/imagePlaceholder"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:background="@color/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/spacing_md"
            app:icon="@android:drawable/ic_menu_close_clear_cancel"
            app:iconTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_md"
            android:text="Modern Studio near Campus"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_xxl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagePlaceholder" />

        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="$800"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_xl"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText" />

        <TextView
            android:id="@+id/perMonthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/per_month"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_md"
            app:layout_constraintBaseline_toBaselineOf="@id/priceText"
            app:layout_constraintStart_toEndOf="@id/priceText" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_sm"
            android:drawablePadding="@dimen/spacing_xs"
            android:text="University District, Seattle"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_md"
            app:drawableStartCompat="@android:drawable/ic_menu_mylocation"
            app:drawableTint="@color/text_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceText" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_md"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationText" />

        <TextView
            android:id="@+id/detailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="Details"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_lg"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:id="@+id/detailsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_sm"
            android:layout_marginEnd="@dimen/spacing_md"
            android:text="1 bedroom • 1 bathroom • 500 sqft"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsLabel" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_md"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsText" />

        <TextView
            android:id="@+id/amenitiesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/amenities"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_lg"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/amenitiesChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_sm"
            android:layout_marginEnd="@dimen/spacing_md"
            app:chipSpacingHorizontal="@dimen/spacing_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amenitiesLabel" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_md"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amenitiesChipGroup" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/description"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_lg"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_sm"
            android:layout_marginEnd="@dimen/spacing_md"
            android:lineSpacingExtra="4dp"
            android:text="Beautiful modern studio apartment located just minutes from campus. Perfect for students! Features include updated kitchen, hardwood floors, and plenty of natural light. Walking distance to restaurants, shops, and public transportation."
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionLabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contactButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_md"
            android:text="@string/contact_owner"
            app:layout_constraintEnd_toStartOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_md"
            android:text="@string/save"
            app:icon="@android:drawable/star_big_off"
            app:layout_constraintBottom_toBottomOf="@id/contactButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/contactButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
